deployment/kustomize/environments/dev/patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentdemo
spec:
  template:
    spec:
      containers:
        - name: uwsgi
