deployment/kustomize/environments/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluentdemo
spec:
  rules:
    - host: fluentdemo.localk8s
      http:
        paths:
          - path: /
            backend:
              serviceName: fluentdemo
              servicePort: 80
